--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <html>
   <title> RDR2 Ultimate Steam Deck Guide </title>
-  <h1> RDR2 Ultimate Steam Deck Guide </h1>
+  <center>
+    <h1> RDR2 Ultimate Steam Deck Guide </h1> </center>
