--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
   <title> RDR2 Ultimate Steam Deck Guide </title>
   <center>
-    <h1> RDR2 Ultimate Steam Deck Guide </h1> </center>
+    <h1> RDR2 Ultimate Steam Deck Guide </h1>
+  </center>
